Fix address shrinking on mobile

--- a/src/pages/mail/mailboxPage/mailboxListRow/mailboxListRow.module.scss
+++ b/src/pages/mail/mailboxPage/mailboxListRow/mailboxListRow.module.scss
@@ -43,6 +43,7 @@
 	display: flex;
 	align-items: center;
 	padding: 0 4px 0 0;
+	min-width: 0;
 }
 
 .contactsNumber {
